package group_assignment.employee_management.exception;

public class FileException extends RuntimeException {
  public FileException(String message) {
    super(message);
  }
}
